omni/tests/goldens/types/undefined_ident_19.omni
let result19:int = missing19
